[tool.poetry]
name = "miblepy"
version = "0.4.6"
description = "miblepy fetches data from various (Xiaomi/Mijia/Mi) Bluetooth LE devices and push it to a MQTT broker in a coordinated, sequential manner."
readme = "README.md"
homepage = "https://github.com/benleb/miblepy"
repository = "https://github.com/benleb/miblepy"
authors = ["Ben Lebherz <git@benleb.de>"]
license = "MIT"
keywords = ["bluetooth", "smart-home", "sensor", "xiaomi", "home-assistant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Topic :: Home Automation",
]

[tool.poetry.dependencies]
python = "==3.*,>=3.8.0"
bluepy = "^1.3"
paho-mqtt = "^1.5.0"
tomlkit = "^0.6.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "==5.*,>=5.2.0"
black = "==19.*,>=19.10.0.b0"
mypy = "==0.*,>=0.770.0"
isort = "==4.*,>=4.3.21"
flake8 = "==3.*,>=3.8.1"
pycodestyle = "==2.*,>=2.6.0"
bandit = "==1.*,>=1.6.2"

[tool.poetry.scripts]
mible = 'miblepy.mible.cli:cli'



[tool.dephell.main]
versioning = "semver"
tag = "v{version}"
# read from poetry format
from = { format = "poetry", path = "pyproject.toml" }
# drop dev-dependencies
envs = ["main"]
# and convert into setup.py
to = { format = "setuppy", path = "setup.py" }

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
combine_star = true
line_length = 120
lines_after_imports = 2
lines_between_types = 1
order_by_type = true
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
